@@ -85,11 +85,11 @@ LIVE_REPOSITORY_KEYRING_edu="debian-edu-archive-keyring"
 LIVE_REPOSITORY_DISTRIBUTION_edu="etch-test"
 LIVE_REPOSITORY_SECTIONS_edu="local"
 
-LIVE_REPOSITORY_duo="http://ftp.debian-unofficial.org/debian/"
-LIVE_REPOSITORY_KEY_duo="http://ftp-master.debian-unofficial.org/key_2006.asc"
-LIVE_REPOSITORY_KEYRING_duo=""
-LIVE_REPOSITORY_DISTRIBUTION_duo=""
-LIVE_REPOSITORY_SECTIONS_duo="main contrib non-free restricted"
+LIVE_REPOSITORY_restricted="http://ftp.debian-unofficial.org/debian-restricted/"
+LIVE_REPOSITORY_KEY_restricted="http://ftp-master.debian-unofficial.org/key_2007.asc"
+LIVE_REPOSITORY_KEYRING_restricted=""
+LIVE_REPOSITORY_DISTRIBUTION_restricted=""
+LIVE_REPOSITORY_SECTIONS_restricted="restricted"
 
 LIVE_REPOSITORY_fai="http://www.informatik.uni-koeln.de/fai/download/"
 LIVE_REPOSITORY_KEY_fai=""
